# Plugin_SKM

./: Cargo.toml  README.md
examples/: standalone.rs
src/: lib.rs
src/core/: animation.rs  math.rs  mod.rs  sample.rs  serialization.rs  skeleton.rs
src/editor/: mod.rs  panel.rs  transform_inputs.rs  workspace.rs
src/rendering/: mod.rs
src/rendering/timeline/: mod.rs  panel.rs  renderer.rs  types.rs
src/rendering/timeline/shaders/: timeline.wgsl
src/rendering/viewport/: mod.rs  panel.rs  renderer.rs  types.rs
src/rendering/viewport/shaders/: gizmo.wgsl  resolve.wgsl  scene.wgsl
src/ui_components/: hierarchy_panel.rs  mod.rs  properties_panel.rs
